# software-engineering-ws15

./: CMakeLists.txt  CMakeLists.txt~  CmakeLists.txt~  Makefile  Makefile~  celsiustofahrenheitconverter.cpp  celsiustofahrenheitconverter.cpp~  celsiustofahrenheitconverter.hpp  celsiustofahrenheitconverter.hpp~  celsiustokelvinconverter.cpp  celsiustokelvinconverter.cpp~  celsiustokelvinconverter.hpp  celsiustokelvinconverter.hpp~  command.hpp  command.hpp~  currencyconverter.cpp  currencyconverter.hpp  currencyconverter.hpp~  decorator.cpp~  decorator.hpp  decorator.hpp~  dollartoeuroconverter.cpp  dollartoeuroconverter.cpp~  dollartoeuroconverter.hpp  dollartoeuroconverter.hpp~  dollartopoundconverter.cpp  dollartopoundconverter.cpp~  dollartopoundconverter.hpp~  dollartoswissfrancconverter.cpp  dollartoswissfrancconverter.cpp~  dollartoswissfrancconverter.hpp~  factory.cpp  factory.cpp~  factory.hpp  factory.hpp~  inverse.cpp  inverse.cpp~  inverse.hpp  inverse.hpp~  lengthconverter.cpp  (+20 more)
